# gerber_explorer

./: .clang-format  .gitignore  CMakeLists.txt  license.txt  readme.md
.github/workflowes/: release.yml
.github/workflows/: release.yml  releaser.yml
cmake/: codesign_bundle.cmake  compile_options.cmake  compile_shaders.cmake  print_size.cmake  utils.cmake
gerber_explorer/: CMakeLists.txt  application.icns  force_inline.h  gerber_drawer.cpp  gerber_drawer.h  gerber_explorer.cpp  gerber_explorer.h  gl_3d_drawer.cpp  gl_3d_drawer.h  gl_base.cpp  gl_base.h  gl_colors.h  gl_drawer.cpp  gl_drawer.h  gl_function_list.h  gl_functions.cpp  gl_functions.h  gl_matrix.cpp  gl_matrix.h  gl_window.cpp  gl_window.h  glcorearb.h  glext.h  gpu_3d_drawer.cpp  gpu_3d_drawer.h  gpu_base.cpp  gpu_base.h  gpu_colors.h  gpu_drawer.cpp  gpu_drawer.h  gpu_matrix.cpp  gpu_matrix.h  gpu_render.cpp  gpu_window.cpp  gpu_window.h  icon.xcf  job_pool.cpp  job_pool.h  log_drawer.cpp  log_drawer.h  (+6 more)
gerber_explorer/assets/: matsym_codepoints_utf8.h
gerber_explorer/shaders/: arc_fragment_shader.glsl  arc_vertex_shader.glsl  blit_fragment_shader.glsl  color_vertex_shader.glsl  common_fragment_shader.glsl  layer_fragment_shader.glsl  layer_vertex_shader.glsl  line2_fragment_shader.glsl  line2_vertex_shader.glsl  line_fragment_shader.glsl  line_vertex_shader.glsl  selection_fragment_shader.glsl  solid_vertex_shader.glsl  textured_fragment_shader.glsl  textured_vertex_shader.glsl
gerber_explorer/shaders_hlsl/: arc.frag.hlsl  arc.vert.hlsl  blit.frag.hlsl  blit.vert.hlsl  color.vert.hlsl  common.frag.hlsl  layer.frag.hlsl  layer.vert.hlsl  line.frag.hlsl  line.vert.hlsl  line2.frag.hlsl  line2.vert.hlsl  selection.frag.hlsl  solid.vert.hlsl
gerber_explorer/shaders_msl/: blit.frag.metal  blit.vert.metal  color.vert.metal  common.frag.metal  layer.frag.metal  layer.vert.metal  line2.frag.metal  line2.vert.metal  selection.frag.metal  solid.vert.metal
gerber_explorer/win32/: gl_window.cpp  gl_window.h
gerber_lib/: CMakeLists.txt  dx_math.h  gerber_2d.cpp  gerber_2d.h  gerber_aperture.cpp  gerber_aperture.h  gerber_arc.h  gerber_arena.cpp  gerber_arena.h  gerber_draw.h  gerber_drill.cpp  gerber_entity.h  gerber_enums.cpp  gerber_enums.h  gerber_error.cpp  gerber_error.h  gerber_error_codes.h  gerber_format.h  gerber_image.cpp  gerber_image.h  gerber_level.cpp  gerber_level.h  gerber_lib.cpp  gerber_lib.h  gerber_log.cpp  gerber_log.h  gerber_math.h  gerber_net.cpp  gerber_net.h  gerber_reader.cpp  gerber_reader.h  gerber_state.h  gerber_stats.cpp  gerber_stats.h  gerber_util.cpp  gerber_util.h
gerber_test_files/: 2-13-1_Two_square_boxes.gbr  SMD_prim_20_X1.gbr  SMD_prim_21.gbr  TimerSwitch.GTL  TimerSwitch_Copper_Signal_Top.gbr  TimerSwitch_local_origin.GTL  TimerSwitch_regions_only.GTL  arc_1.gbr  arc_2.gbr  arc_3.gbr  arc_4.gbr  arc_5.gbr  ble_gadget_Copper_Signal_Top.gbr  clock_Copper_Signal_Bot.gbr  clock_Copper_Signal_Top.gbr  clock_Profile.gbr  clutch_pcb_Copper_Signal_Top.gbr  controller_Copper_Signal_Top.gbr  gnarly_jlcpcb_production.gbr  ko  macro.gbr  minimal_jlcpcb.gbr  pocxo.L1  react4_Copper_Signal_Bot.gbr  region.gbr  sample_macro.gbr  test_outline_Copper_Signal_Top.gbr  wch554g_Copper_Signal_Bot.gbr  wch554g_Profile.gbr  wch554g_Soldermask_Bot.gbr
tools/codepoints/: main.py  matsym_codepoints.h
